shop.produce draft test fixes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "forge test"
+    "test": "forge test -vvv"
   },
   "repository": {
     "type": "git",
