--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "forge test -vvv"
+    "test": "forge test -vvv",
+    "test": "forge coverage"
   },
   "repository": {
     "type": "git",
