--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,10 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 
+[rpc_endpoints]
+polygon = "${POLYGON_RPC}"
+
+[etherscan]
+polygon = { key = "${POLYGONSCAN_API_KEY}" }
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
