--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "scripts": {
     "test": "forge test -vvv",
     "cover": "forge coverage",
-    "coverage": "forge coverage --report lcov && perl %GENHTML% -o coverage lcov.info",
+    "coverage": "forge coverage --report lcov && perl %GENHTML% -o coverage lcov.info --branch-coverage --function-coverage",
     "report": "start coverage/index.html",
-    "abis": "forge inspect VaultShop abi > abis/VaultShop.abi.json && forge inspect IPrivateVault abi > abis/IPrivateVault.abi.json && xcopy abis ..\\privatevaults-app\\www\\abis\\ /s /e /y"
+    "abis": "forge inspect VaultShop abi > abis/VaultShop.abi.json && forge inspect IPrivateVault abi > abis/IPrivateVault.abi.json && xcopy abis ..\\privatevaults-app\\www\\abis\\ /s /e /y",
+    "anvil-mock": "start anvil && npm run mock-deploy",
+    "mock-deploy": "forge script script/Deploy.s.sol:MockDeploy --fork-url http://localhost:8545 --broadcast"
   },
   "repository": {
     "type": "git",
